@@ -14,6 +14,7 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.BitSet;
 import java.util.Collections;
 import java.util.List;
@@ -24,11 +25,33 @@ import java.util.logging.Level;
  *  <p>Holds one or more {@link PVAData} elements.
  *  Often named as for example a normative type.
  *
+ *  <p>Usage example:
+ *  <pre>
+ *  PVAChannel channel = ...;
+ *  PVAStructure data = channel.read("").get();
+ *
+ *  // To debug, dump complete structure
+ *  System.out.println(data);
+ *
+ *  // Introspect
+ *  System.out.println("Structure of type " + data.getStructureName());
+ *  for (PVAData element : data.get())
+ *      System.out.println(element);*
+ *
+ *  // For known structure, get elements by name
+ *  PVAString value = data.get("value");
+ *  System.out.println("value = " + value.get());
+ *  </pre>
+ *
  *  @author Kay Kasemir
  */
 @SuppressWarnings("nls")
 public class PVAStructure extends PVADataWithID
 {
+    static
+    {
+    }
+
     static PVAStructure decodeType(final PVATypeRegistry types, final String name, final ByteBuffer buffer) throws Exception
     {
         final String struct_name = PVAString.decodeString(buffer);
@@ -66,7 +89,7 @@ public class PVAStructure extends PVADataWithID
      */
     public PVAStructure(final String name, final String struct_name, final PVAData... elements)
     {
-        this(name, struct_name, List.of(elements));
+        this(name, struct_name, Arrays.asList(elements));
     }
 
     /** @param name Name of the structure (may be "")
@@ -273,6 +296,7 @@ public class PVAStructure extends PVADataWithID
      *
      *  @param element_name Name of structure element
      *  @return Located element or <code>null</code>
+     *  @param <PVA> PVAData or subclass
      */
     @SuppressWarnings("unchecked")
     public <PVA extends PVAData> PVA get(final String element_name)
@@ -307,6 +331,7 @@ public class PVAStructure extends PVADataWithID
      *
      *  @param index Element index
      *  @return Located element or <code>null</code>
+     *  @param <PVA> PVAData or subclass
      */
     @SuppressWarnings("unchecked")
     public <PVA extends PVAData> PVA get(final int index)
